# ifm

./: CMakeLists.txt  LICENSE  README.md
cmake/: FindJSON.cmake
include/: CMakeLists.txt
include/ifm/: 2op.h  adam.h  bessel.h  channel_state.h  exp_match.h  fft.h  fm.h  load_monoral.h  midi_player.h  midi_sequencer2.h  segment_envelope.h  setter.h  spectrum_image.h  store_monoral.h
src/: 2op.cpp  CMakeLists.txt  approx_env.cpp  bessel.cpp  bessel_benchmark.cpp  exp_match.cpp  fft.cpp  fm.cpp  fm2spec.cpp  fm2wav.cpp  freq2fm.cpp  load_monoral.cpp  lossimage.cpp  midi_player.cpp  precomp_bessel.cpp  segment_envelope.cpp  spectrum_image.cpp  store_monoral.cpp  test_bessel.cpp  wav2env.cpp  wav2fm.cpp  wav2freq.cpp  wav2harm.cpp  wav2image2.cpp  wav2wav.cpp
